<resources>
    <string name="app_name">REPIT</string>
    <string name="description">Description...</string>
    <string name="title">Title</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="collections">Collections</string>
    <string name="home">Home</string>
    <string name="start_test">Start Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signOut">Sign Out</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="userImage">user image</string>
    <string name="user_cover_image">User cover image</string>
    <string name="generate_test_data">Generate Test Data</string>
    <string name="channel_name">Repit-Channel</string>
    <string name="channel_description">Repit-Basic-NotificationChannel</string>
    <string name="create_new_test">CREATE NEW TEST</string>
    <string name="publicText">Public</string>
    <string name="add_test_title">Add Test Title...</string>
    <string name="test_description">Test Description...</string>
    <string name="add_test_image">ADD TEST IMAGE</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="test_cover_image">Test cover image</string>
    <string name="add_question_to_test">ADD QUESTION TO TEST</string>
    <string name="add_question">ADD QUESTION</string>
    <string name="view_questions">View Questions</string>
    <string name="edit_test">EDIT TEST</string>
    <string name="edit_test_title">Edit Test Title...</string>
</resources>
