<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_view"
    android:layout_width="190sp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#e6e6e6"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:outlineProvider="bounds"
    android:elevation="10dp">

    <ImageView
        android:id="@+id/quiz_image"
        android:layout_width="190sp"
        android:layout_height="100dp"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="TODO"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/quiz_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quiz_description"
        android:layout_width="240sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/description"
        android:visibility="gone"/>

    <Button
        android:id="@+id/startTestBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="bottom"
        android:background="#fff"
        android:padding="10dp"
        android:text="@string/start_test"
        android:textColor="@color/colorPrimary" />
</LinearLayout>