<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".create_test_fragment">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_test"
        android:textColor="@color/colorPrimary"
        android:padding="20dp"
        android:textSize="24sp" />


    <Switch
        android:id="@+id/editPublicSwitch"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:text="@string/publicText" />


    <EditText
        android:id="@+id/editTestTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/edit_test_title"
        android:inputType="textPersonName" />



    <EditText
        android:id="@+id/editTestDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTestTitle"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Test Description..."
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/editTestImageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADD TEST IMAGE"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="20dp"
        android:layout_below="@+id/editTestDescription"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/updateImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTestDescription"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="UPDATE IMAGE" />

    <ImageView
        android:id="@+id/updateCoverImage"
        android:layout_width="180dp"
        android:layout_height="85dp"
        android:elevation="10dp"
        android:layout_below="@+id/editTestDescription"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateCoverImage"
        android:layout_margin="20dp"
        android:text="ADD QUESTION TO TEST" />

    <Button
        android:id="@+id/addQuestionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginStart="20dp"
        android:text="ADD QUESTION" />


    <Button
        android:id="@+id/viewQuestionsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:text="View Questions" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_check" />
</RelativeLayout>